Fix z-index of robot marker

--- a/frontend/src/styles/settingsPage.css
+++ b/frontend/src/styles/settingsPage.css
@@ -26,7 +26,7 @@
 
 #settingsPopup {
   position: fixed;
-  z-index: 101;
+  z-index: 999;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
